k8s/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: google-classroom-application
  labels:
    name: google-classroom-application
    environment: production
