k8s/10-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: google-classroom-ingress
  namespace: google-classroom-application
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: google-classroom-server-svc
                port:
                  number: 5000
